Closed Bug 120422 Opened 24 years ago Closed 24 years ago

Leaks on Brad tbox went up ~1KB, CSSImportantRule?

Categories

(SeaMonkey :: General, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mcafee, Assigned: blythe)

Details

(Keywords: memory-leak)

Attachments

(1 file)

Leaks on Brad tbox went up, CSSImportantRule? dbaron points at garrett, over to him for a look.
Keywords: mlk
note, circa 1K (1024 bytes) will attempt to fix.
Status: NEW → ASSIGNED
right, rpotts big leak stuff was hiding new leak creep numbers for about 36 hours.
Summary: Leaks on Brad tbox went up, CSSImportantRule? → Leaks on Brad tbox went up ~1KB, CSSImportantRule?
I think this is showing up as a leak because you do |delete mImportantRule| when mImportantRule is a refcounted object (in nsCSSStyleRule.cpp), and you should NS_RELEASE instead.
Here are my steps: From mozilla/dist/bin, I do: ./mozilla -f bloaturls.txt --trace-malloc=tm.log ./run-mozilla.sh ./leakstats tm.log And I get: Leaks: 1181609 bytes, 17924 allocations Maximum Heap Size: 7937132 bytes 48286522 bytes were allocated in 393852 allocations. Now, this is just a build with no modifications that I recently pulled (last night). I tried this a few days back with the same results. __How__ can brad tbox report 1k of leaks (well, 303kb today), while I get 1M of leaks? In any event, dbaron is totally right, I should be NS_RELEASEing regardless of the leak reproducability. Patching coming....
Request for r= sr=
adding hyatt in hopes of the sr= for patch.
Comment on attachment 66171 [details] [diff] [review] NS_RELEASE instead of delete. r=dbaron. It's the old-style leak stats that went up. See http://mozilla.org/performance/leak-brownbag.html#tbox
Attachment #66171 - Flags: review+
Comment on attachment 66171 [details] [diff] [review] NS_RELEASE instead of delete. rs=hyatt
Attachment #66171 - Flags: review+
Comment on attachment 66171 [details] [diff] [review] NS_RELEASE instead of delete. a=shaver on behalf of drivers@mozilla.org. (Also marking r/sr in the patch manager on behalf of dbaron and hyatt.)
Attachment #66171 - Flags: superreview+
Attachment #66171 - Flags: review+
Attachment #66171 - Flags: approval+
checked in on trunk and branch.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: