Fix bug 120422 r=dbaron,rs=hyatt Do not delete ref counted object.